src/objects/E2_Estimate_Week_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <referenceTo>CMC_Presales_LOE__c</referenceTo>
        <relationshipLabel>Estimate Week Milestones</relationshipLabel>
        <relationshipName>Estimate_Week_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Estimate Week Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Estimate__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate Week Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>